# airflow-mcp

./: CHANGELOG.md  LICENSE  README.md  airflow_mcp.py  main.py  mcp_config.json  pyproject.toml
airflow_mcp/: __init__.py  airflow_mcp.py
