[project]
name = "airflow-mcp"
version = "0.1.0"
description = "本项目是一个与 Apache Airflow 集成的 Model Context Protocol (MCP) 服务器，提供多种工具来管理和监控 Airflow 的 DAG 运行。它支持触发 DAG、获取 DAG 状态、回填数据、获取日志等操作。"
readme = "README.md"
license = { text = "MIT" }
keywords = ["airflow", "mcp", "server", "cli", "monitoring", "management"]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
]

[[project.authors]]
name = "treerootboy"
email = "treerootboy@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
airflow-mcp = "airflow_mcp:main"